update to watch later button (making it actually work) | refix embed issues | more resize patches

--- a/css/2006.css
+++ b/css/2006.css
@@ -756,6 +756,10 @@
     left: 0 !important;
 }
 
+.ytp-embed .ytp-chrome-bottom .ytp-chapters-container {
+	width: 100% !important;
+}
+
 .ytp-embed .ytp-impression-link {
     display: none !important;
 }
