--- a/css/2010.css
+++ b/css/2010.css
@@ -656,6 +656,10 @@
 	left: unset !important;
 }
 
+.ytp-embed .ytp-chrome-bottom .ytp-chapters-container {
+	width: 100% !important;
+}
+
 .ytp-pause-overlay {
 	display: none;
 }
