--- a/css/2010-white.css
+++ b/css/2010-white.css
@@ -104,12 +104,12 @@
 
 /* MUTE */
 .ytp-button.ytp-mute-button[title="Unmute (m)"] svg {
-	background: url('chrome-extension://__MSG_@@extension_id__/img/2010%20icons/volume-mute.png') no-repeat center;
+	background: url('chrome-extension://__MSG_@@extension_id__/img/2010%20icons/volume-mute.png') no-repeat center !important;
     background-size: 34px;
 }
 
 .ytp-button.ytp-mute-button[data-title-no-tooltip="Unmute"]:hover svg {
-	background: url('chrome-extension://__MSG_@@extension_id__/img/2010%20icons/volume-hover.png') no-repeat center;
+	background: url('chrome-extension://__MSG_@@extension_id__/img/2010%20icons/volume-hover.png') no-repeat center !important;
     background-size: 34px;
 }
 
