--- a/css/2010-dark.css
+++ b/css/2010-dark.css
@@ -87,8 +87,8 @@
 }
 
 .ytp-button.ytp-mute-button:hover svg {
-	background: url('chrome-extension://__MSG_@@extension_id__/img/2010%20icons/volume-mute-hover.png') no-repeat center;
-    background-size: 34px;
+	background: url('chrome-extension://__MSG_@@extension_id__/img/2010%20icons/volume-mute-hover.png') no-repeat center !important;
+    background-size: 34px !important;
 }
 
 /* MEDIUM VOLUME */
@@ -105,12 +105,12 @@
 
 /* MUTE */
 .ytp-button.ytp-mute-button[title="Unmute (m)"] svg {
-	background: url('chrome-extension://__MSG_@@extension_id__/img/2010%20icons/volume-mute.png') no-repeat center !important;
+	background: url('chrome-extension://__MSG_@@extension_id__/img/2010%20icons/volume-mute.png') no-repeat center;
     background-size: 34px;
 }
 
 .ytp-button.ytp-mute-button[data-title-no-tooltip="Unmute"]:hover svg {
-	background: url('chrome-extension://__MSG_@@extension_id__/img/2010%20icons/volume-hover.png') no-repeat center !important;
+	background: url('chrome-extension://__MSG_@@extension_id__/img/2010%20icons/volume-hover.png') no-repeat center;
     background-size: 34px;
 }
 
