--- a/css/base.css
+++ b/css/base.css
@@ -2,13 +2,13 @@
     display: none;
 }
 
-.ytp-spinner-container {
-    display: none;
-}
-
-.ytp-spinner-container .ytp-spinner {
+.ytp-spinner {
     background: url("chrome-extension://__MSG_@@extension_id__/img/loading.gif") center center / contain no-repeat;
     height: 64px;
+}
+
+.ytp-spinner-container {
+    display: none;
 }
 
 /* BEZEL ICONS */
