--- a/css/2012.css
+++ b/css/2012.css
@@ -437,6 +437,15 @@
 	padding-top: 0px;
 }
 
+.ytp-chrome-top .ytp-button.ytp-playlist-menu-button {
+    background: url(chrome-extension://__MSG_@@extension_id__/img/2012-icons.png) no-repeat;
+    background-position: -78px -914px;
+    transition: .5s !important;
+    background-size: 220px;
+    width: 40px !important;
+    bottom: 5px;
+}
+
 .ytp-title-text {
 	padding: 0px !important;
 }
@@ -448,12 +457,30 @@
     top: 8px;
 }
 
-.ytp-title-link.yt-uix-sessionlink.ytp-title-fullerscreen-link:hover {
-	cursor: pointer;
+.ytp-chrome-top .ytp-button.ytp-share-button {
+	background: url(chrome-extension://__MSG_@@extension_id__/img/2012-icons.png) no-repeat;
+	background-position: 2px -524px;
+	transition: .5s !important;
+	background-size: 220px;
+	width: 40px !important;
+	bottom: 5px;
 }
 
-.ytp-share-icon svg {
+.ytp-chrome-top .ytp-button.ytp-share-button svg {
 	display: none;
+}
+
+.ytp-chrome-top .ytp-button.ytp-cards-button {
+	background: url(chrome-extension://__MSG_@@extension_id__/img/2012-icons.png) no-repeat;
+	background-position: 5px -512px;
+	transition: .5s !important;
+	background-size: 200px;
+	width: 40px !important;
+	bottom: 5px;
+}
+
+.ytp-title-link.yt-uix-sessionlink.ytp-title-fullerscreen-link:hover {
+	cursor: pointer;
 }
 
 .ytp-share-panel-service-button svg {
