--- a/css/2010.css
+++ b/css/2010.css
@@ -452,7 +452,7 @@
 /* SUBTITLES BUTTON */
 
 .ytp-subtitles-button.ytp-button[title="Subtitles/closed captions unavailable"] {
-	display: none;
+	display: none !important;
 }
 
 .ytp-subtitles-button.ytp-button::after {
