--- a/css/2012.css
+++ b/css/2012.css
@@ -388,7 +388,7 @@
 /* SUBTITLES BUTTON */
 
 .ytp-subtitles-button.ytp-button[title="Subtitles/closed captions unavailable"] {
-	display: none;
+	display: none !important;
 }
 
 .ytp-subtitles-button.ytp-button::after {
