--- a/css/2012.css
+++ b/css/2012.css
@@ -619,3 +619,9 @@
 }
 
 /* ################################# */
+
+/* 3rd-party extensions */
+
+.ytp-autohide .ytp-chrome-bottom #previewbar {
+	
+}
