--- a/css/2012.css
+++ b/css/2012.css
@@ -24,7 +24,7 @@
 
 .ytp-chrome-bottom .ytp-progress-bar-container {
 	width: 100% !important;
-	bottom: 31px !important;
+	bottom: 32px !important;
 }
 
 .ytp-chrome-bottom .ytp-chapters-container {
@@ -85,7 +85,6 @@
 }
 
 .ytp-progress-bar:hover {
-	margin-bottom: 1px;
 	height: var(--pt-progress-bar-full-height);
 }
 
@@ -143,16 +142,6 @@
 
 .ytp-autohide .ytp-progress-bar {
     height: 5px;
-}
-
-.ytp-autohide .ytp-progress-bar-container {
-    width: calc( 100% + 20px );
-    margin-left: -12px;
-}
-
-.ytp-big-mode.ytp-autohide .ytp-progress-bar-container {
-    width: calc( 100% + 48px );
-    margin-left: -24px;
 }
 
 .ytp-autohide .ytp-player-content:not(.html5-endscreen) {
@@ -252,6 +241,10 @@
     display: none;
 }
 
+.ytp-chrome-bottom .ytp-button {
+	background-size: 200px;
+}
+
 .ytp-button svg {
 	display: none;
 }
@@ -300,7 +293,7 @@
     width: auto !important;
 }
 
-.ytp-big-mode .ytp-chapter-title-content {
+.ytp-big-mode .ytp-chapter-title {
 	font-size: 14px;
 }
 
@@ -309,11 +302,11 @@
 }
 
 .ytp-chapter-container .ytp-chapter-title-content {
-  margin-bottom: 2px;
+	margin-bottom: 2px;
 }
 
 .ytp-chapter-container .ytp-chapter-title-prefix {
-  margin-bottom: 2px;
+	margin-bottom: 2px;
 }
 
 /* ################################# */
@@ -623,5 +616,7 @@
 /* 3rd-party extensions */
 
 .ytp-autohide .ytp-chrome-bottom #previewbar {
-	
+	top: -7px;
 }
+
+/* ################################# */
