additional things for sponosorblock

--- a/css/2010.css
+++ b/css/2010.css
@@ -676,4 +676,8 @@
 	top: -5px;
 }
 
+.ytp-big-mode.ytp-autohide .ytp-chrome-bottom #previewbar {
+    top: -7px;
+}
+
 /* ################################# */
