--- a/css/2012.css
+++ b/css/2012.css
@@ -619,4 +619,8 @@
 	top: -7px;
 }
 
+.ytp-big-mode.ytp-autohide .ytp-chrome-bottom #previewbar {
+    top: -9px;
+}
+
 /* ################################# */
