fix chapter title size not resizing for sponosorblock

--- a/css/2011.css
+++ b/css/2011.css
@@ -387,7 +387,7 @@
     width: auto !important;
 }
 
-.ytp-big-mode .ytp-chapter-title-content {
+.ytp-big-mode .ytp-chapter-title {
 	font-size: 14px;
 }
 
